--- a/halo/template/parts/domestic-card.pug
+++ b/halo/template/parts/domestic-card.pug
@@ -37,4 +37,4 @@
         i (Viết cách, không dấu)
       input#input__name.form-control.front-input(type="text" required)
 
-    a.btn.btn--confirmation(href='checkout.html') Xác nhận
+    a.btn.btn--confirmation.final-btn(href='checkout.html') Xác nhận
