--- a/halo/css/index.css
+++ b/halo/css/index.css
@@ -370,7 +370,7 @@ main {
 /* ---------- connection styles ----------*/
 .connection__form {
   margin: 20px auto 40px auto;
-  max-width: 400px;
+  max-width: 450px;
 }
 
 .connection__input {
@@ -399,7 +399,7 @@ main {
 }
 
 .connection__submit-btn {
-  width: 60px;
+  width: 70px;
   margin: 0px;
 }
 
@@ -867,6 +867,12 @@ main {
     background-repeat: no-repeat;
   }
 
+  .inner-ring {
+    width: 280px;
+    top: calc(50% - 142px);
+    right: calc(50% - 138px);
+  }
+
   .btn,
   h3 {
     font-size: 18px;
@@ -1036,7 +1042,7 @@ main {
   .banner-2 .carousel-caption__extra {
     width: 400px;
     margin: auto;
-    height: 65px;
+    height: 50px;
   }
 
   .banner-2 .extra-img {
