--- a/halo/template/payment.pug
+++ b/halo/template/payment.pug
@@ -106,7 +106,8 @@ block content
             ul#answer4.faq__item--answer.collapse.show 
               li.font-weight-bold - Always has been.
 
-          h3.text-center Các câu hỏi khác cần tư vấn, vui lòng liên hệ hotline: 012.345.6789
+          h3.text-center Các câu hỏi khác cần tư vấn, vui lòng liên hệ hotline: 
+            a.text-primary(href="#") 012.345.6789
 
         p.term-toggler__wrapper.text-center Khi bấm xác nhận, quý khách đã đồng ý với 
           span.term-toggler.text-primary.font-italic(data-toggle="collapse" data-target=".confirmation__term") các điều khoản đặt hàng và thanh toán của chúng tôi.
