--- a/halo/css/checkout.css
+++ b/halo/css/checkout.css
@@ -80,7 +80,7 @@ main {
 .btn--continue-buying {
   font-size: 14px;
   background-color: #99DE7F;
-  margin-top: 15px;
+  margin: 15px auto 0px auto;
   display: flex;
   justify-content: center;
   align-items: center;
