--- a/halo/css/review.css
+++ b/halo/css/review.css
@@ -145,6 +145,7 @@ section {
   .review__sub-banner--small {
     display: block;
     position: relative;
+    border-radius: 8px;
   }
 
   .review__sub-banner--small:nth-child(2) {
@@ -154,12 +155,14 @@ section {
   .easter-egg {
     position: absolute;
     bottom: 0px;
+    left: 0px;
     font-size: 20px;
     font-weight: bold;
     padding-left: 5%;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.35);
+    background-color: rgba(0, 0, 0, 0.45);
     color: white;
+    border-radius: 0px 0px 8px 8px;
   }
 
   .review__sub-banner--small img {
@@ -269,7 +272,7 @@ section {
     flex-direction: column;
     font-size: 28px;
     width: 75%;
-    height: 428px;
+    height: 425px;
     background-position: left;
   }
 
