--- a/halo/template/review.pug
+++ b/halo/template/review.pug
@@ -49,23 +49,26 @@ block content
       span Mối tình đầu với team "viền đỏ"
 
     .review__sub-banner--small-area 
-      a.review__sub-banner--small(href="review-details.html")
-        img(src="img/img--review/review-sub-banner-1.png", alt="") 
 
       a.review__sub-banner--small(href="review-details.html")
-        img(src="img/img--review/review-sub-banner-2.png", alt="") 
+        img(src="img/img--review/review-sub-banner-3.png", alt="") 
+        span.easter-egg Sigma 17-50mm Review 
 
       a.review__sub-banner--small(href="review-details.html")
-        span.easter-egg 60D Review 
-        img(src="img/img--review/review-small-banner-max-v3.jpg", alt="") 
+        img(src="img/img--review/review-sub-banner-4.jpg", alt="") 
+        span.easter-egg Canon 85mm Review 
+
+      a.review__sub-banner--small(href="review-details.html")
+        img(src="img/img--review/review-sub-banner-5.png", alt="") 
+        span.easter-egg Canon 60D Review 
 
   section.main-area.container-xl
     .review__post-area
 
       .review__post-collection
-        include parts/review-post.pug
-        include parts/review-post.pug
-        include parts/review-post.pug
+        include parts/review-post-1.pug
+        include parts/review-post-2.pug
+        include parts/review-post-3.pug
 
       .loading-indicator.justify-content-center.mb-5
         .spinner-grow.text-dark
