--- a/halo/template/review.pug
+++ b/halo/template/review.pug
@@ -80,14 +80,14 @@ block content
     aside.review__aside-area.hidden-till-md
       h3.aside__header Đọc nhiều nhất
       a.aside__post.d-block(href="")
-        img.aside__post--img(src="img/img--review/aside-img-v2.jpg", alt="")
+        img.aside__post--img(src="img/img--review/aside-img-1.png", alt="")
+        p.aside__post--header D500 Review: Canh bạc của Nikon
+
+      a.aside__post.d-block(href="")
+        img.aside__post--img(src="img/img--review/aside-img-2.jpg", alt="")
         p.aside__post--header Vị thế hiện tại của 2 ông lớn Ca-Ni
 
       a.aside__post.d-block(href="")
-        img.aside__post--img(src="img/img--review/aside-img-v2.jpg", alt="")
-        p.aside__post--header Vị thế hiện tại của 2 ông lớn Ca-Ni
-
-      a.aside__post.d-block(href="")
-        img.aside__post--img(src="img/img--review/aside-img-v2.jpg", alt="")
-        p.aside__post--header Vị thế hiện tại của 2 ông lớn Ca-Ni
+        img.aside__post--img(src="img/img--review/aside-img-3.png", alt="")
+        p.aside__post--header D5600 Review: Máy ảnh cho mọi nhà
     
