--- a/halo/template/parts/main-carousel.pug
+++ b/halo/template/parts/main-carousel.pug
@@ -29,7 +29,7 @@
           p.main-carousel__text CHUẨN MỰC HÌNH ẢNH HIỆN ĐẠI
 
 
-          button.btn.btn--light.seemore-btn(type='button') Xem chi tiết
+          a.btn.btn--light.seemore-btn(href="details.html") Xem chi tiết
 
         .carousel-caption__img
 
@@ -76,7 +76,7 @@
           p.main-carousel__text.display-till-md CHƯA BAO GIỜ ĐƠN GIẢN  ĐẾN VẬY
 
 
-          button.btn.btn--light.seemore-btn(type='button') Xem chi tiết
+          a.btn.btn--light.seemore-btn(href="details.html") Xem chi tiết
 
         .carousel-caption__img
 
@@ -106,7 +106,7 @@
             span.logo-sony-inline SONY
 
 
-          button.btn.btn--light.seemore-btn(type='button') Xem chi tiết
+          a.btn.btn--light.seemore-btn(href="details.html") Xem chi tiết
 
         .carousel-caption__img.display-till-md
 
