--- a/halo/template/review.pug
+++ b/halo/template/review.pug
@@ -35,7 +35,7 @@ block content
         a.carousel-item(href="review-details.html") 
           img(src='img/img--review/review-sub-banner-3.png' alt='')
         a.carousel-item(href="review-details.html") 
-          img(src='img/img--review/review-sub-banner-4.png' alt='')
+          img(src='img/img--review/review-sub-banner-4.jpg' alt='')
             
       a.carousel-control-prev(href='#sub-banner-area--min' data-slide='prev')
         span.carousel-control-prev-icon
