--- a/halo/css/review.css
+++ b/halo/css/review.css
@@ -126,6 +126,7 @@ section {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    overflow: hidden;
   }
 
   .review__sub-banner--big span{
