--- a/halo/template/review.pug
+++ b/halo/template/review.pug
@@ -28,12 +28,13 @@ block content
         
       .carousel-inner
         a.carousel-item.active(href="review-details.html") 
-          img(src='/halo/img/img--review/sub-banner-big--min.jpg' alt='')
+          img(src='/halo/img/img--review/review-big-banner-max-v7.jpg' alt='')
           .carousel-caption
             h3 Một ngày cùng Canon 35mm f/1.4&nbsp;L:
             p Mối tình đầu với team "viền đỏ"
         a.carousel-item(href="review-details.html") 
           img(src='img/img--review/review-sub-banner-3.png' alt='')
+          span.easter-egg Sigma 17-50mm Review 
         a.carousel-item(href="review-details.html") 
           img(src='img/img--review/review-sub-banner-4.jpg' alt='')
             
