--- a/halo/template/parts/footer.pug
+++ b/halo/template/parts/footer.pug
@@ -16,7 +16,7 @@ footer.dark-side#footer
         a.footer__link.text-center.font-weight-bold(href="#") Liên hệ
     
     p.footer__info
-      | Địa chỉ: Số Math.pow(n+1, 2), phố “ABC”, Hà Nội 
+      | Địa chỉ: Tầng 12A, tòa nhà Viwaseen Tower, số 48, Tố Hữu, Hà Nội
       br
       | Tổng đài tư vấn mua hàng: 099.999.9999
       br 
