--- a/halo/css/payment.css
+++ b/halo/css/payment.css
@@ -140,7 +140,7 @@ textarea.form-control {
 }
 
 .method__toggler:nth-child(2) {
-  margin-bottom: 5px;
+  margin: 5px 0px;
 }
 
 .method__toggler label {
