--- a/halo/template/details.pug
+++ b/halo/template/details.pug
@@ -290,12 +290,12 @@ block content
           .old-comment__content.media-body
             h3.details__sub-header
               | Đánh giá: 
-              span.mr-auto.ml-2 x / 5
+              span.mr-auto.ml-2 4 / 5
               small.font-italic
                 i.far.fa-clock
                 |  01/01/2021
-            h3.username.details__sub-header Harry "Styles" Potter
-            p.comment-text Sản phẩm tốt mà lại rẻ, ai cũng nên mua 2 3 cái chụp hoa cỏ chó mèo.
+            h3.username.details__sub-header John Doe
+            p.comment-text Chất lượng tương xứng với giá tiền
             p.reply-report 
               a.replyToggler.disabled(href="#") 
                 i.fas.fa-reply.mr-3
@@ -308,12 +308,12 @@ block content
           .old-comment__content.media-body
             h3.details__sub-header
               | Đánh giá: 
-              span.mr-auto.ml-2 x / 5
+              span.mr-auto.ml-2 4 / 5
               small.font-italic
                 i.far.fa-clock
                 |  01/01/2021
-            h3.username.details__sub-header Meme Lót
-            p.comment-text Tin gì quả seeder này các bạn ơi
+            h3.username.details__sub-header John Also Doe
+            p.comment-text Đồng ý
             p.reply-report 
               a.replyToggler(href="#") 
                 i.fas.fa-reply.mr-3
@@ -326,12 +326,12 @@ block content
           .old-comment__content.media-body
             h3.details__sub-header
               | Đánh giá: 
-              span.mr-auto.ml-2 x / 5
+              span.mr-auto.ml-2 4 / 5
               small.font-italic
                 i.far.fa-clock
                 |  01/01/2021
-            h3.username.details__sub-header Mr. Steal your girl
-            p.comment-text Hàng đẹp y hình, quay tiktok uy tín luôn.
+            h3.username.details__sub-header John Still Doe
+            p.comment-text Hơi nặng và khó dùng.
             p.reply-report 
               a.replyToggler(href="#") 
                 i.fas.fa-reply.mr-3
@@ -339,24 +339,6 @@ block content
               a.reportToggler(href="#")
                 i.fas.fa-flag.mr-3
                 | Báo cáo
-        //.comment__old-comment 
-          .old-comment__row 
-            img.old-commen_avatar(src="img/img--details/avatar.png", alt="") 
-            .old-comment__content
-              h3.main-info__inner-header Đánh giá
-                span x / 5
-              p.username Mr. XY 
-              p.comment-text Lorem ipsum dolor sit amet, consectetdolornt occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit, unt in culpa qui officia deserunt mollit anim id est laborum.
-
-          .old-comment__row 
-            img.old-commen_avatar(src="img/img--details/avatar.png", alt="") 
-            .old-comment__content
-              h3.main-info__inner-header Đánh giá
-                span x / 5
-              p.username Mr. XY 
-              p.comment-text Lorem ipsum dolor sit amet, consectetdolornt occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit, unt in culpa qui officia deserunt mollit anim id est laborum.
-
-          button.comment__btn.btn.btn--dark Xem thêm
 
     section.details__recommend
       h2.details__sub-header Sản phẩm đi kèm khuyên dùng
