--- a/halo/template/cart.pug
+++ b/halo/template/cart.pug
@@ -36,7 +36,7 @@ block content
           a.col--img-max.hidden-till-md(href="details.html")
             img(src="img/img--cart/cart-img.jpg", alt="canon eos 1DX Mark 3")
           .col--name 
-            a(href="details.html") Canon EOS 1DX Mark III
+            a(href="details.html") Canon EOS 1DX Mark&nbsp;III
           .col--single-price 
             span.display-till-md Đơn giá:&nbsp; 
             | 100.000.000đ
@@ -59,19 +59,19 @@ block content
         .col-group
           .col--order.hidden-till-md 2 
           a.col--img-max.hidden-till-md(href="details.html")
-            img(src="img/img--cart/cart-img.jpg", alt="canon eos 1DX Mark 3")
+            img(src="img/img--item/item-3-max.jpg", alt="canon eos 1DX Mark 3")
           .col--name 
-            a(href="details.html") Canon EOS 1DX Mark III
+            a(href="details.html") Sony Alpha A7 Mark&nbsp;II
           .col--single-price 
             span.display-till-md Đơn giá:&nbsp; 
-            | 100.000.000đ          
+            | 23.990.000đ          
           .col--quantity
             .quantity__minus -
             .quantity__number 2 
             .quantity__plus +
           .col--multiple-price 
             span.display-till-md Thành tiền:&nbsp; 
-            | 200.000.000đ
+            | 47.980.000đ
           .col--remove.display-till-md.text-danger.font-italic Xóa khỏi giỏ hàng 
           .col--remove.hidden-till-md
             i.far.fa-times-circle.col--remove__btn
