--- a/halo/template/details.pug
+++ b/halo/template/details.pug
@@ -71,7 +71,7 @@ block content
 
         .summary__btn-wrapper
           a.summary__btn.btn.d-flex.justify-content-center.align-items-center(href="cart.html") Mua ngay      
-          button.summary__btn.btn Thêm vào giỏ hàng 
+          button.summary__btn.btn.btn--add-to-cart Thêm vào giỏ hàng 
 
         .summary__box-content 
           h2.details__sub-header.text-left.mb-3 Hộp sản phẩm bao gồm
