--- a/halo/template/parts/header.pug
+++ b/halo/template/parts/header.pug
@@ -31,6 +31,8 @@ header#header
         a#logregToggler.hidden-till-md.log-max(href='#' data-toggle='modal' data-target='#logreg') Đăng nhập/Đăng ký
         a.cart-icon(href="cart.html")
           <i class="fas fa-shopping-cart"></i>
+          .cart__badge-wrapper
+            span.cart__badge 0
         button.btn.search-btn.hidden-till-md.d-flex.align-items-center(onclick="searchBarToggler()")
           <i class="fas fa-search"></i>
 
