--- a/halo/template/review.pug
+++ b/halo/template/review.pug
@@ -29,22 +29,22 @@ block content
         
       .carousel-inner
         a.carousel-item.active(href="review-details.html") 
-          img(src='/halo/img/img--review/review-sub-banner-2.jpg' alt='')
+          img(src='/halo/img/img--review/review-big-banner-xl-sfw.jpg' alt='')
           .carousel-caption
-            h3 Một ngày cùng Canon 35mm f/1.4&nbsp;L
+            h3 Một ngày cùng Canon M5
         a.carousel-item(href="review-details.html") 
-          img(src='img/img--review/review-sub-banner-3.png' alt='')
+          img(src='img/img--review/review-small-banner-xl-sfw-1.jpg' alt='')
           .carousel-caption
-            h3 Sigma 17-50mm&nbsp;Review 
+            h3 Sony A6400 Review 
           span.easter-egg 
         a.carousel-item(href="review-details.html") 
-          img(src='img/img--review/review-sub-banner-4.jpg' alt='')
+          img(src='img/img--review/review-small-banner-xl-sfw-2.jpg' alt='')
           .carousel-caption
             h3 Canon 85mm Review         
         a.carousel-item(href="review-details.html") 
-          img(src='img/img--review/review-sub-banner-5.png' alt='')
+          img(src='img/img--review/review-small-banner-xl-sfw-3.jpg' alt='')
           .carousel-caption
-            h3 Canon 60D Review       
+            h3 Sigma 150-600mm f/5-6.3 Review
             
       a.carousel-control-prev(href='#sub-banner-area--min' data-slide='prev')
         span.carousel-control-prev-icon
@@ -54,29 +54,27 @@ block content
   section#sub-banner-area--max.container-xl.hidden-till-md
 
     a.review__sub-banner--big(href="review-details.html")
-      img.display-till-xl(src="/halo/img/img--review/review-big-banner-md-v1.jpg", alt="")
-      img.hidden-till-xl(src="/halo/img/img--review/review-big-banner-xl-v7.jpg", alt="")
+      img.display-till-xl(src="/halo/img/img--review/review-big-banner-md-sfw.jpg", alt="")
+      img.hidden-till-xl(src="/halo/img/img--review/review-big-banner-xl-sfw.jpg", alt="")
       .sub-banner__caption
-        span Một ngày cùng Canon 35mm f/1.4&nbsp;L:
-        br
-        span Mối tình đầu với team "viền đỏ"
+        span Một ngày cùng Canon M5
 
     .review__sub-banner--small-area 
 
       a.review__sub-banner--small(href="review-details.html")
-        img(src="img/img--review/review-sub-banner-3.png", alt="") 
+        img(src="img/img--review/review-small-banner-xl-sfw-1.jpg", alt="") 
         .sub-banner__caption
-          span Sigma 17-50mm Review 
+          span Sony A6400 Review
 
       a.review__sub-banner--small(href="review-details.html")
-        img(src="img/img--review/review-sub-banner-4.jpg", alt="") 
+        img(src="img/img--review/review-small-banner-xl-sfw-2.jpg", alt="") 
         .sub-banner__caption
-          span Canon 85mm Review 
+          span Nikon Z7 Review
 
-      a.review__sub-banner--small(href="review-details.html")
-        img(src="img/img--review/review-sub-banner-5.png", alt="") 
+      a.review__sub-banner--small.hidden-till-xl(href="review-details.html")
+        img(src="img/img--review/review-small-banner-xl-sfw-3.jpg", alt="") 
         .sub-banner__caption
-          span Canon 60D Review 
+          span Sigma 150-600mm f/5-6.3 Review
 
   section.main-area.container-xl
     .review__post-area
