--- a/halo/css/review.css
+++ b/halo/css/review.css
@@ -20,6 +20,10 @@ section {
   height: 30vh;
 }
 
+.carousel-item img {
+  width: 100%;
+}
+
 .carousel-caption {
   padding: 0px 0px 0px 0px;
   background-color: rgba(0, 0, 0, 0.4);
@@ -109,33 +113,29 @@ section {
   #sub-banner-area--max {
     display: flex !important;
     justify-content: space-between;
+    align-items: stretch;
   }
-
+  
   #sub-banner-area--max img {
     transition: all 0.5s;
   }
 
   #sub-banner-area--max a:hover > img {
-    transform: scale(1.1);
+    transform: scale(1.07);
   }
 
   .review__sub-banner--big {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    color: white;
-    flex-direction: column;
-    font-size: 18px;
-    font-weight: bold;
-    width: 70%;
+    display: block;
+    width: calc(70% - 20px);
     margin-right: 20px;
     border-radius: 8px;
     overflow: hidden;
     position: relative;
   }
 
-  .review__sub-banner--big img{
+  .review__sub-banner--big img {
     width: 100%;
+    height: 100%;
   }
 
   .review__sub-banner--big:hover {
@@ -154,7 +154,7 @@ section {
   }
 
   .review__sub-banner--small:nth-child(2) {
-    margin: 20px 0px;
+    margin-top: 20px
   }
 
   .sub-banner__caption {
@@ -240,11 +240,6 @@ section {
   }
 }
 
-@media only screen and (min-width: 800px) {
-  .review__sub-banner--big {
-    height: calc(((100vw - 80px)/6.5625)*3);
-  }
-}
 
 @media only screen and (min-width: 992px) {
   .review__post:hover .post__header,
@@ -287,8 +282,7 @@ section {
     flex-direction: column;
     font-size: 28px;
     width: 75%;
-    height: 425px;
-    background-position: left;
+    height: 460px;
   }
 
   .review__post--img {
@@ -305,16 +299,15 @@ section {
     width: 25%;
   }
 
-  .sub-banner__caption {
-    font-size: 24px;
+  .review__sub-banner--big .sub-banner__caption {
+    font-size: 28px;
     font-weight: 700;
+    line-height: 60px;
   }
 
-  .review__sub-banner--small .sub-banner__caption {
-    font-size: 18px;
-    line-height: 1.8;
+  .review__sub-banner--small:nth-child(2) {
+    margin-bottom: 20px;
   }
-
 
   .post__subtext {
     margin: 5px 0px 25px 0px;
